test/conformance/chainsaw/deferred/foreach/cm.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: testcase-7fki3-resource
