test/conformance/chainsaw/deferred/foreach/cm-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: testcase-7fki3-resource
data:
  from_loop_1: AAA
  from_loop_2: AAA
  from_loop_3: AAA
