test/conformance/chainsaw/deferred/foreach/01-apply.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: apply
spec:
  timeouts: {}
  try:
  - apply:
      check: null
      file: manifests.yaml
  - assert:
      file: policy-assert.yaml
