test/conformance/chainsaw/deferred/foreach/02-testcase.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: testcase
spec:
  timeouts: {}
  try:
  - apply:
      check: null
      file: cm.yaml
  - assert:
      file: cm-assert.yaml
