test/conformance/chainsaw/deferred/foreach/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: foreach
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: testcase-7fki3
  - name: step-02
    try:
    - apply:
        file: cm.yaml
    - assert:
        file: cm-assert.yaml
